--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,13 @@ body {
   scroll-behavior: smooth;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  /* font-family: 'Bungee', cursive; */
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./image/nohands.jpg);
+  background-image: url(./image/bg.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
